2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Require mono 0.31.

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/FileSelector.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Always save playlists with an m3u extension, only open playlist
	files with a m3u extension.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/EllipsizingLabel.cs:

	Replace an unnecessary DllImport.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Use Path.* where appropiate. (Thanks Lee!)

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	A data/glade/GroupEditor.glade:
	* data/glade/Makefile.am:
	A data/glade/PlaylistFilling.glade:

	Commit glade files for the groups stuff.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	R src/GroupWindow.cs:
	* src/Makefile.am:

	Remove unused code.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* src/PlaylistWindow.cs:

	Release preparation.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Do some AlbumKey caching.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/GnomeProxy.cs:

	Better error handling.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:
	* src/SongDatabase.cs:

	Dirty, but absolutely massive optimization using g_path_get_dirname
	instead of FileInfo. This cuts down startup time to a sane 5 seconds
	when not cached, or one second when cached (~20k songs).

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverImage.cs:

	Only show "loading" image when an image is actually loading.

2004-04-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	More startup optimization.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_foreach):
	* src/CoverDatabase.cs:
	* src/SongDatabase.cs:

	More optimization and thread fixage.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Add some Thread.Sleep stuff to make the thread eat the CPU a little
	less vigorously.
