@@ -1,4 +1,5 @@
 noinst_DATA =					\
+	muine-about.png				\
 	muine-add-album.png			\
 	muine-add-album-16.png			\
 	muine-next.png				\
